--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "freeboard_app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.14.6",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "next": "13.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
-  }
+    "name": "freeboard_app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@ant-design/icons": "^5.0.1",
+        "@apollo/client": "^3.7.10",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@types/node": "18.14.6",
+        "@types/react": "18.0.28",
+        "@types/react-dom": "18.0.11",
+        "antd": "^5.3.0",
+        "eslint": "8.35.0",
+        "eslint-config-next": "13.2.3",
+        "graphql": "^16.6.0",
+        "next": "13.2.3",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.43.5",
+        "typescript": "4.9.5"
+    },
+    "devDependencies": {
+        "prettier": "2.8.4"
+    }
 }
