--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "generate": "graphql-codegen"
     },
     "dependencies": {
         "@ant-design/icons": "^5.0.1",
@@ -22,11 +23,14 @@
         "graphql": "^16.6.0",
         "next": "13.2.3",
         "react": "18.2.0",
+        "react-daum-postcode": "^3.1.1",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.5",
         "typescript": "4.9.5"
     },
     "devDependencies": {
+        "@graphql-codegen/cli": "^3.2.2",
+        "@graphql-codegen/typescript": "^3.0.2",
         "prettier": "2.8.4"
     }
 }
