--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/react": "18.0.28",
         "@types/react-dom": "18.0.11",
         "antd": "^5.3.0",
+        "dayjs": "^1.11.7",
         "eslint": "8.35.0",
         "eslint-config-next": "13.2.3",
         "graphql": "^16.6.0",
