--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-daum-postcode": "^3.1.1",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.5",
+        "recoil": "^0.7.7",
         "typescript": "4.9.5"
     },
     "devDependencies": {
